--- a/Site/public/lista.html
+++ b/Site/public/lista.html
@@ -27,74 +27,92 @@
                 <li><a href="./lista.html">Filmes</a></li>
                 <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="./login.html">Login</a></li>
+                <li id="login"><a href="./login.html">Login</a></li>
+                <li id="usuario" class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn"><span id="perfil"></span></a>
+                    <div class="dropdown-content">
+                        <a href="#" onclick="logoff()">Sair</a>
+                </li>
             </ul>
         </nav>
-    </div>
-    <br>
-    <div class="container-lista-grande">
-        <div class="container-lista-filmes">
-            <div class="titulo">
-                <h1>Lista de Filmes</h1>
-            </div>
-            <div class="lista">
-                <img class="img-lista fica" id="0" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMjZjNDU5YTktZjBlMS00YTRlLTg0YWMtMTBlMjViNmJiNDQ3XkEyXkFqcGdeQXVyMjUxODE0MDY@._V1_SX300.jpg" alt="tt0006907">
-                <img class="img-lista fica" id="10" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjEzYjIxMjQtNTgxOC00YzFhLWI0NTgtYTY0ZjYyOTg2NTRmXkEyXkFqcGdeQXVyNjMxODMyODU@._V1_SX300.jpg" alt="tt0019968">
-                <img class="img-lista cel-some" id="9" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMDhiN2MwNjgtODMwNC00NzM2LWExNDMtNGYwYjlmM2Y0NTYzL2ltYWdlXkEyXkFqcGdeQXVyNjUzNzQ4NDQ@._V1_SX300.jpg" alt="tt0089736">
-                <img class="img-lista cel-some" id="6" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTFmY2ZmMzAtYWU4ZC00OWU1LWExNmItZmY2MGMzY2Q4MjJlXkEyXkFqcGdeQXVyOTI0MTUwNzA@._V1_SX300.jpg" alt="tt0004028">
-                <img class="img-lista tab-sumir" id="15" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjk4ZTQwN2EtNzc3Yy00M2U4LWJjZjUtZDE3NDAxZjQ2MTA2XkEyXkFqcGdeQXVyMDY4MzkyNw@@._V1_SX300.jpg" alt="tt0054791">
-            </div>
-            <br>
-            <div class="lista">
-                <img class="img-lista fica" id="5" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BODEzOTllN2ItNDg2ZC00YWZhLTgwZmEtMDJkN2E2ZGU1NzVjXkEyXkFqcGdeQXVyMTE4MTQ1MjE@._V1_SX300.jpg" alt="tt0044214">
-                <img class="img-lista fica" id="13" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZjM1YWM0MzEtYmMzNi00NzAzLTk1N2ItMWMxZGI3MWI4ZDc3XkEyXkFqcGdeQXVyNDY1NzU5NjY@._V1_SX300.jpg" alt="tt0011474">
-                <img class="img-lista cel-some" id="11" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZjJmMjJiOWMtZmQyOS00MmExLTliMjgtNGIxNmMxOWJmMWE2XkEyXkFqcGdeQXVyMjM2ODYwMQ@@._V1_SX300.jpg" alt="tt0088629">
-                <img class="img-lista cel-some" id="16" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjY4YWM3N2YtZmY1NS00OTMwLTgwNzUtZTBlM2Y2NGE5YzExXkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0087429">
-                <img class="img-lista tab-sumir" id="1" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTMyODMxMTg3OV5BMl5BanBnXkFtZTcwMDI3MjE5Mw@@._V1_SX300.jpg" alt="tt0026959">
-            </div>
-            <br>
-            <div class="lista">
-                <img class="img-lista fica" id="7" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTZmMGYyNTItY2JhMy00MWMxLTk5YWItMTEzNzNkZWRjMTc0XkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0056531">
-                <img class="img-lista fica" id="14" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMzUzMWMzYTItYzMwMy00NGZiLWIyNzktZDRhMWIzMDRlZGUwXkEyXkFqcGdeQXVyMTY5Nzc4MDY@._V1_SX300.jpg" alt="tt0041396">
-                <img class="img-lista cel-some" id="8" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_SX300.jpg" alt="tt0050083">
-                <img class="img-lista cel-some" id="2" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMmNmNjdiMmEtMWM3Zi00ODNjLWJmNjItMmY5MGJmMTQ3ZmI4XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0094100">
-                <img class="img-lista tab-sumir" id="19" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYWFjOTkyYWUtY2ViNS00M2JmLTg2NDYtZWYwMTIxMTU2NWZkXkEyXkFqcGdeQXVyMTA3NzE5MzE@._V1_SX300.jpg" alt="tt0060717">
-            </div>
-            <br>
-            <div class="lista">
-                <img class="img-lista fica" id="4" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNmFkMjRlNjEtMDY4NC00ZDc2LWE2NTMtMjIzMWMxOTM1MmZmXkEyXkFqcGdeQXVyMDMxMjQwMw@@._V1_SX300.jpg" alt="tt0023124">
-                <img class="img-lista fica" id="18" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTg5ZTkyNmItYjYwZC00NTM4LTg2NWItMjEwODczZmUyZjFjXkEyXkFqcGdeQXVyNzcyMTE4NzU@._V1_SX300.jpg" alt="tt0062588">
-                <img class="img-lista cel-some" id="12" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZDdlMDdjMjEtZjg0MC00Y2JlLThhNzItNmI4ZTgxODI4YzczXkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0095539">
-                <img class="img-lista cel-some" id="3" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNGRiNDUxMjQtZDBjYi00MzYxLWFlZmItMzVkZjNlMDRiZDVmXkEyXkFqcGdeQXVyOTI2MjI5MQ@@._V1_SX300.jpg" alt="tt0044601">
-                <img class="img-lista tab-sumir" id="17" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTk3MjI1NTg0Ml5BMl5BanBnXkFtZTcwODAwODk0MQ@@._V1_SX300.jpg" alt="tt0057939">
-            </div>
-            <br>
-            <button class="botao-random" onclick="pesquisar_filme()"><img src="./img/random.png"</button>
-
         </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="footer">
+        <br>
+        <div class="container-lista-grande">
+            <div class="container-lista-filmes">
+                <div class="titulo">
+                    <h1>Lista de Filmes</h1>
+                </div>
+                <div class="lista">
+                    <img class="img-lista fica" id="0" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMjZjNDU5YTktZjBlMS00YTRlLTg0YWMtMTBlMjViNmJiNDQ3XkEyXkFqcGdeQXVyMjUxODE0MDY@._V1_SX300.jpg" alt="tt0006907">
+                    <img class="img-lista fica" id="10" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjEzYjIxMjQtNTgxOC00YzFhLWI0NTgtYTY0ZjYyOTg2NTRmXkEyXkFqcGdeQXVyNjMxODMyODU@._V1_SX300.jpg" alt="tt0019968">
+                    <img class="img-lista cel-some" id="9" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMDhiN2MwNjgtODMwNC00NzM2LWExNDMtNGYwYjlmM2Y0NTYzL2ltYWdlXkEyXkFqcGdeQXVyNjUzNzQ4NDQ@._V1_SX300.jpg" alt="tt0089736">
+                    <img class="img-lista cel-some" id="6" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTFmY2ZmMzAtYWU4ZC00OWU1LWExNmItZmY2MGMzY2Q4MjJlXkEyXkFqcGdeQXVyOTI0MTUwNzA@._V1_SX300.jpg" alt="tt0004028">
+                    <img class="img-lista tab-sumir" id="15" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjk4ZTQwN2EtNzc3Yy00M2U4LWJjZjUtZDE3NDAxZjQ2MTA2XkEyXkFqcGdeQXVyMDY4MzkyNw@@._V1_SX300.jpg" alt="tt0054791">
+                </div>
+                <br>
+                <div class="lista">
+                    <img class="img-lista fica" id="5" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BODEzOTllN2ItNDg2ZC00YWZhLTgwZmEtMDJkN2E2ZGU1NzVjXkEyXkFqcGdeQXVyMTE4MTQ1MjE@._V1_SX300.jpg" alt="tt0044214">
+                    <img class="img-lista fica" id="13" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZjM1YWM0MzEtYmMzNi00NzAzLTk1N2ItMWMxZGI3MWI4ZDc3XkEyXkFqcGdeQXVyNDY1NzU5NjY@._V1_SX300.jpg" alt="tt0011474">
+                    <img class="img-lista cel-some" id="11" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZjJmMjJiOWMtZmQyOS00MmExLTliMjgtNGIxNmMxOWJmMWE2XkEyXkFqcGdeQXVyMjM2ODYwMQ@@._V1_SX300.jpg" alt="tt0088629">
+                    <img class="img-lista cel-some" id="16" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjY4YWM3N2YtZmY1NS00OTMwLTgwNzUtZTBlM2Y2NGE5YzExXkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0087429">
+                    <img class="img-lista tab-sumir" id="1" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTMyODMxMTg3OV5BMl5BanBnXkFtZTcwMDI3MjE5Mw@@._V1_SX300.jpg" alt="tt0026959">
+                </div>
+                <br>
+                <div class="lista">
+                    <img class="img-lista fica" id="7" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTZmMGYyNTItY2JhMy00MWMxLTk5YWItMTEzNzNkZWRjMTc0XkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg" alt="tt0056531">
+                    <img class="img-lista fica" id="14" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMzUzMWMzYTItYzMwMy00NGZiLWIyNzktZDRhMWIzMDRlZGUwXkEyXkFqcGdeQXVyMTY5Nzc4MDY@._V1_SX300.jpg" alt="tt0041396">
+                    <img class="img-lista cel-some" id="8" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMWU4N2FjNzYtNTVkNC00NzQ0LTg0MjAtYTJlMjFhNGUxZDFmXkEyXkFqcGdeQXVyNjc1NTYyMjg@._V1_SX300.jpg" alt="tt0050083">
+                    <img class="img-lista cel-some" id="2" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMmNmNjdiMmEtMWM3Zi00ODNjLWJmNjItMmY5MGJmMTQ3ZmI4XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0094100">
+                    <img class="img-lista tab-sumir" id="19" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYWFjOTkyYWUtY2ViNS00M2JmLTg2NDYtZWYwMTIxMTU2NWZkXkEyXkFqcGdeQXVyMTA3NzE5MzE@._V1_SX300.jpg" alt="tt0060717">
+                </div>
+                <br>
+                <div class="lista">
+                    <img class="img-lista fica" id="4" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNmFkMjRlNjEtMDY4NC00ZDc2LWE2NTMtMjIzMWMxOTM1MmZmXkEyXkFqcGdeQXVyMDMxMjQwMw@@._V1_SX300.jpg" alt="tt0023124">
+                    <img class="img-lista fica" id="18" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTg5ZTkyNmItYjYwZC00NTM4LTg2NWItMjEwODczZmUyZjFjXkEyXkFqcGdeQXVyNzcyMTE4NzU@._V1_SX300.jpg" alt="tt0062588">
+                    <img class="img-lista cel-some" id="12" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BZDdlMDdjMjEtZjg0MC00Y2JlLThhNzItNmI4ZTgxODI4YzczXkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0095539">
+                    <img class="img-lista cel-some" id="3" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNGRiNDUxMjQtZDBjYi00MzYxLWFlZmItMzVkZjNlMDRiZDVmXkEyXkFqcGdeQXVyOTI2MjI5MQ@@._V1_SX300.jpg" alt="tt0044601">
+                    <img class="img-lista tab-sumir" id="17" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTk3MjI1NTg0Ml5BMl5BanBnXkFtZTcwODAwODk0MQ@@._V1_SX300.jpg" alt="tt0057939">
+                </div>
+                <br>
+                <button class="botao-random" onclick="pesquisar_filme()"><img src="./img/random.png"</button>
+
+            </div>
+        </div>
         <br>
         <br>
-        <p>Filme Véio © 2021. Todos direitos reservados.</p>
         <br>
         <br>
-    </div>
+        <br>
+        <br>
+        <br>
+        <div class="footer">
+            <br>
+            <br>
+            <p>Filme Véio © 2021. Todos direitos reservados.</p>
+            <br>
+            <br>
+        </div>
 </body>
 <script src="./js/main.js"></script>
 <script>
     'use strict';
-    window.onload = pesquisar_filme;
+    window.onload = ao_entrar;
     let id_filme = " ";
     let id_title = " ";
     let id_src = " ";
+
+    function ao_entrar() {
+        entrar_pagina()
+        pesquisar_filme()
+    }
+
+    function entrar_pagina() {
+        if (sessionStorage.login_usuario_meuapp != undefined) {
+            usuario.style.display = 'block';
+            login.style.display = 'none';
+            perfil.innerHTML = sessionStorage.login_usuario_meuapp
+        }
+    }
 
     function gerar_numero() {
         var numero_random = Math.floor(Math.random() * 100000)
