--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -27,86 +27,104 @@
                 <li><a href="./lista.html">Filmes</a></li>
                 <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="./login.html">Login</a></li>
+                <li id="login"><a href="./login.html">Login</a></li>
+                <li id="usuario" class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn"><span id="perfil"></span></a>
+                    <div class="dropdown-content">
+                        <a href="#" onclick="logoff()">Sair</a>
+                </li>
             </ul>
         </nav>
-    </div>
+        </div>
 
-    <div class="container-carousel">
-        <img class="mySlides" src="./img/1.png">
-        <img class="mySlides" src="./img/2.png">
-        <img class="mySlides" src="./img/3.png">
-        <img class="mySlides" src="./img/4.png">
-    </div>
-    <div class="linha"></div>
-    <br>
-    <div class="container-geral-lista">
-        <div class="container-lista">
-            <div class="titulo">
-                <h1>Lista de Filmes...</h1>
-            </div>
-            <div class="lista">
-                <img class="img-lista fica" id="0" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTZjNzgzZDktNjA1My00MzkwLTgwZTEtMjBkOTcxM2RmMDZjXkEyXkFqcGdeQXVyNzMwOTY2NTI@._V1_SX300.jpg" alt="tt0074877">
-                <img class="img-lista fica" id="1" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTkzZjkwZGItY2IwYi00Yzg0LTliMjktY2U3ZWZhNTg2OTI3XkEyXkFqcGdeQXVyNjE5MjUyOTM@._V1_SX300.jpg" alt="tt0031108">
-                <img class="img-lista cel-some" id="2" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjJhY2ExYWYtNTExOS00NjZjLWEzMDItYmEzZWZlNmQ3Zjk2XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0061613">
-                <img class="img-lista cel-some" id="3" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTdiNjllZGQtOGY4YS00NTljLWFhNzItYjE3OWE5NjUzZTM4XkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0068911">
-                <img class="img-lista tab-sumir" id="4" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTMzNDMxMjc0M15BMl5BanBnXkFtZTcwNDYyODI5Ng@@._V1_SX300.jpg" alt="tt0050152">
-                <button class="botao-seta"><a href="./lista.html"><img src="./img/seta.png"></a></button>
+        <div class="container-carousel">
+            <img class="mySlides" src="./img/1.png">
+            <img class="mySlides" src="./img/2.png">
+            <img class="mySlides" src="./img/3.png">
+            <img class="mySlides" src="./img/4.png">
+        </div>
+        <div class="linha"></div>
+        <br>
+        <div class="container-geral-lista">
+            <div class="container-lista">
+                <div class="titulo">
+                    <h1>Lista de Filmes...</h1>
+                </div>
+                <div class="lista">
+                    <img class="img-lista fica" id="0" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNTZjNzgzZDktNjA1My00MzkwLTgwZTEtMjBkOTcxM2RmMDZjXkEyXkFqcGdeQXVyNzMwOTY2NTI@._V1_SX300.jpg" alt="tt0074877">
+                    <img class="img-lista fica" id="1" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTkzZjkwZGItY2IwYi00Yzg0LTliMjktY2U3ZWZhNTg2OTI3XkEyXkFqcGdeQXVyNjE5MjUyOTM@._V1_SX300.jpg" alt="tt0031108">
+                    <img class="img-lista cel-some" id="2" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BNjJhY2ExYWYtNTExOS00NjZjLWEzMDItYmEzZWZlNmQ3Zjk2XkEyXkFqcGdeQXVyNzc5MjA3OA@@._V1_SX300.jpg" alt="tt0061613">
+                    <img class="img-lista cel-some" id="3" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BYTdiNjllZGQtOGY4YS00NTljLWFhNzItYjE3OWE5NjUzZTM4XkEyXkFqcGdeQXVyMTQ2MjQyNDc@._V1_SX300.jpg" alt="tt0068911">
+                    <img class="img-lista tab-sumir" id="4" onclick="filme_individual(this.id)" src="https://m.media-amazon.com/images/M/MV5BMTMzNDMxMjc0M15BMl5BanBnXkFtZTcwNDYyODI5Ng@@._V1_SX300.jpg" alt="tt0050152">
+                    <button class="botao-seta"><a href="./lista.html"><img src="./img/seta.png"></a></button>
+                </div>
             </div>
         </div>
-    </div>
-    <br>
-    <div class="container-geral-forum">
-        <div class="container-forum">
-            <div class="imagem-forum">
-                <img src="https://cinemaemcena.com.br/uploads/img4f3917276b635.jpg">
-            </div>
-            <div class="texto-forum">
-                <h1>Chat</h1>
-                <p>Nosso chat tem como finalidade, criar uma comunidade de apreciadores de filmes antigos indicarem e darem feedback de filmes...
-                </p>
-                <button class="botao-forum"><a href="./forum.html">Participar!</a></button>
-            </div>
-        </div>
-    </div>
-    <br>
-    <div class="container-geral-forum">
-        <div class="container-forum">
-            <div class="texto-forum">
-                <h1>Um pouco sobre nós</h1>
-                <p>Comecei a fazer o site pois sou um fã de filmes antigos e acho que o filme consegue mostrar o que o diretor pensa sobre a cultura que o filme está inserido...
-                </p>
-                <button class="botao-forum"><a href="./sobre.html">Saiba mais!</a></button>
-            </div>
-            <div class="imagem-forum">
-                <img src="./img/sobre-img.jpg">
+        <br>
+        <div class="container-geral-forum">
+            <div class="container-forum">
+                <div class="imagem-forum">
+                    <img src="https://cinemaemcena.com.br/uploads/img4f3917276b635.jpg">
+                </div>
+                <div class="texto-forum">
+                    <h1>Chat</h1>
+                    <p>Nosso chat tem como finalidade, criar uma comunidade de apreciadores de filmes antigos indicarem e darem feedback de filmes...
+                    </p>
+                    <button class="botao-forum"><a href="./forum.html">Participar!</a></button>
+                </div>
             </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="footer">
+        <br>
+        <div class="container-geral-forum">
+            <div class="container-forum">
+                <div class="texto-forum">
+                    <h1>Um pouco sobre nós</h1>
+                    <p>Comecei a fazer o site pois sou um fã de filmes antigos e acho que o filme consegue mostrar o que o diretor pensa sobre a cultura que o filme está inserido...
+                    </p>
+                    <button class="botao-forum"><a href="./sobre.html">Saiba mais!</a></button>
+                </div>
+                <div class="imagem-forum">
+                    <img src="./img/sobre-img.jpg">
+                </div>
+            </div>
+        </div>
         <br>
         <br>
-        <p>Filme Véio © 2021. Todos direitos reservados.</p>
         <br>
         <br>
-    </div>
+        <br>
+        <br>
+        <br>
+        <div class="footer">
+            <br>
+            <br>
+            <p>Filme Véio © 2021. Todos direitos reservados.</p>
+            <br>
+            <br>
+        </div>
 
 </body>
 <script src="./js/main.js"></script>
 <script src="./js/carousel.js"></script>
 <script>
     'use strict';
-    window.onload = pesquisar_filme;
+    window.onload = ao_entrar;
     let id_filme = " ";
     let id_title = " ";
     let id_src = " ";
+
+    function ao_entrar() {
+        entrar_pagina()
+        pesquisar_filme()
+    }
+
+    function entrar_pagina() {
+        if (sessionStorage.login_usuario_meuapp != undefined) {
+            usuario.style.display = 'block';
+            login.style.display = 'none';
+            perfil.innerHTML = sessionStorage.login_usuario_meuapp
+        }
+    }
 
     function gerar_numero() {
         var numero_random = Math.floor(Math.random() * 100000)
