--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li id="login"><a href="./login.html">Login</a></li>
-                <li id="usuario" class="dropdown">
+                <li id="usuario" class="dropdown lista">
                     <a href="javascript:void(0)" class="dropbtn"><span id="perfil"></span></a>
                     <div class="dropdown-content">
                         <a href="#" onclick="logoff()">Sair</a>
@@ -139,8 +139,8 @@
         while (cont < 5) {
             var imagem_loop = document.getElementById(`${cont}`);
             gerar_numero();
-            let api_key = '9b975cfc'
-                //let api_key = 'e0620bd4';
+            //let api_key = '9b975cfc'
+            let api_key = 'e0620bd4';
             const url = `https://www.omdbapi.com/?apikey=${api_key}&i=${id_filme}`;
             const data = await fetch(url);
             const response = await data.json();
