--- a/Site/public/sobre.html
+++ b/Site/public/sobre.html
@@ -84,7 +84,7 @@
                         </p>
                     </div>
                     <div class="imagem-forum">
-                        <img src="https://s2.glbimg.com/q7BKzEx0y8OwqiGHozFMxen1tu4=/e.glbimg.com/og/ed/f/original/2019/09/18/the-wizard-of-oz.jpg">
+                        <img src="https://s3.amazonaws.com/muzeez/uploads/galleries/large/galleriesFiles/HcPThfQGnJdfPSa2Y-bonnie-e-clyde-imfdb-org.jpg">
                     </div>
                 </div>
             </div>
