--- a/Site/public/sobre.html
+++ b/Site/public/sobre.html
@@ -28,7 +28,7 @@
                 <li><a href="./chat.html">Chat</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li id="login"><a href="./login.html">Login</a></li>
-                <li id="usuario" class="dropdown">
+                <li id="usuario" class="dropdown lado">
                     <a href="javascript:void(0)" class="dropbtn"><span id="perfil"></span></a>
                     <div class="dropdown-content">
                         <a href="#" onclick="logoff()">Sair</a>
@@ -45,7 +45,8 @@
                 <div class="container-forum">
                     <div class="texto-forum">
                         <h1>Um pouco da criação do site</h1>
-                        <p>Comecei a fazer o site pois sou um fã de filmes antigos e acho que o filme consegue mostrar o que o diretor pensa sobre a cultura que o filme está inserido...
+                        <p>Comecei a gostar de filmes quando comecei a fazer teatro quando tinhas uns 8 anos, e o tempo foi passando e comecei a apreciar filmes antigos, pois tem muita historia, e todo diretor e roteirista quer passar uma mensagem e com
+                            isso aprendemos muito. Por esse motivo fiz esse site.
                         </p>
                     </div>
                     <div class="imagem-forum">
